k8s/setting/rails.yaml
apiVersion: v1
kind: Service 
metadata:
  namespace: sample
  name: myapp-rails
  labels:
    app: myapp
    component: rails
spec:
  selector:
    app: myapp
    component: rails
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: sample
  name: myapp-rails
  labels:
    app: myapp
    component: rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      component: rails
  template:
    metadata:
      labels:
        app: myapp
        component: rails
    spec:
      restartPolicy: Always
      containers:
        - name: rails
          image:  kensei416/myapp:0.0.1
          imagePullPolicy: Always
          command: ["bundle", "exec", "rails", "s", '-p', '3000', '-b', '0.0.0.0']
          ports:
          - containerPort: 3000
